# cuda-exercises

./: .bazelrc  .gitignore  CMakeLists.txt  README.md  WORKSPACE  conanfile.py  nvcc-options.md
build-tools/bazel/macros/: nvcc_binary.bzl
lib/: handle-error.cu  handle-error.cuh  matrix-addition.cu  matrix-addition.cuh  matrix-multiplication.cu  matrix-multiplication.cuh  matrix-types.cuh  vector-addition.cu  vector-addition.cuh
noddy-test/: BUILD
nvcc_tools/: BUILD  nvcc.bzl  nvcc_binary.bzl  nvcc_toolchain.bzl
test/: CMakeLists.txt  conanfile.py  matrix-addition.cu  matrix-multiplication.cu  vector-addition.cu
test_package/: CMakeLists.txt  conanfile.py
toolchain/: BUILD  CROSSTOOL  nvcc-gcc.py  nvcc-ld.py
vector-addition/: BUILD  main.cu
vector-addition/src/: main.cu  maymay.cc
